<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableRow
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="80dp"
            android:singleLine="true"
            android:text="@string/username" />

        <TextView
            android:id="@+id/textView_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="80dp"
            android:singleLine="true" />
    </TableRow>

    <TableRow
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/study_course" />

        <TextView
            android:id="@+id/textView_study"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:singleLine="true" />
    </TableRow>

    <TableRow
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/study_group" />

        <TextView
            android:id="@+id/textView_student_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:singleLine="true" />
    </TableRow>

    <TableRow
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/student_number" />

        <TextView
            android:id="@+id/textView_student_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:drawableRight="@drawable/ic_menu_attachment"
            android:singleLine="true" />
    </TableRow>

</TableLayout>